<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Son Depremler </string>

    <string name="title_activity_main">Depremler</string>
    <string name="title_activity_map">Depremleri Görüntüle</string>
    <string name="title_activity_statistics">Deprem İstatistikleri</string>
    <string name="title_activity_settings">Seçenekler</string>
    <string name="title_activity_details">Deprem Detayları</string>
    <string name="title_activity_about">Hakkımızda</string>
    <string name="title_activity_search">Ara</string>
    <string name="title_activity_weather_details">Hava Durumu Detayları</string>

    <string name="navigation_drawer_open">Aç</string>
    <string name="navigation_drawer_close">Kapa</string>

    <string name="action_refresh">Yenile</string>
    <string name="action_map">Harita</string>
    <string name="action_statistics">İstatistik</string>
    <string name="action_search">Arama</string>
    <string name="action_settings">Seçenekler</string>

    <string name="email_address">baskstudios@hotmail.com</string>

    <string name="preference_magnitude_label">Deprem Büyüklüğünü Seçiniz</string>
    <string name="preference_magnitude_label_1.0" translatable="false">1.0+</string>
    <string name="preference_magnitude_label_2.0" translatable="false">2.0+</string>
    <string name="preference_magnitude_label_3.0" translatable="false">3.0+</string>
    <string name="preference_magnitude_label_4.0" translatable="false">4.0+</string>
    <string name="preference_magnitude_label_4.5" translatable="false">4.5+</string>
    <string name="preference_magnitude_label_5.0" translatable="false">5.0+</string>
    <string name="preference_magnitude_label_5.5" translatable="false">5.5+</string>
    <string name="preference_magnitude_label_6.0" translatable="false">6.0+</string>
    <string name="preference_magnitude_label_6.5" translatable="false">6.5+</string>
    <string name="preference_magnitude_label_7.0" translatable="false">7.0+</string>
    <string name="preference_magnitude_label_7.5" translatable="false">7.5+</string>
    <string name="preference_magnitude_key" translatable="false">magnitude</string>
    <string name="preference_magnitude_1.0" translatable="false">1.0</string>
    <string name="preference_magnitude_2.0" translatable="false">2.0</string>
    <string name="preference_magnitude_3.0" translatable="false">3.0</string>
    <string name="preference_magnitude_4.0" translatable="false">4.0</string>
    <string name="preference_magnitude_4.5" translatable="false">4.5</string>
    <string name="preference_magnitude_5.0" translatable="false">5.0</string>
    <string name="preference_magnitude_5.5" translatable="false">5.5</string>
    <string name="preference_magnitude_6.0" translatable="false">6.0</string>
    <string name="preference_magnitude_6.5" translatable="false">6.5</string>
    <string name="preference_magnitude_7.0" translatable="false">7.0</string>
    <string name="preference_magnitude_7.5" translatable="false">7.5</string>

    <string name="preference_duration_label">Varsayılan Tarih Filtresi</string>
    <string name="preference_duration_label_last_hour">Son Saat</string>
    <string name="preference_duration_label_today">Bugün</string>
    <string name="preference_duration_label_last_24_hr">Son 24 Saat</string>
    <string name="preference_duration_label_this_week">Bu Hafta</string>
    <string name="preference_duration_key" translatable="false">duration</string>
    <string name="preference_duration_last_hour" translatable="false">lasthour</string>
    <string name="preference_duration_today" translatable="false">today</string>
    <string name="preference_duration_last_24_hr" translatable="false">last24hr</string>
    <string name="preference_duration_this_week" translatable="false">thisweek</string>

    <string name="preference_distance_label">Mesafe Birimleri</string>
    <string name="preference_distance_label_miles">Mile</string>
    <string name="preference_distance_label_kilometers">Kilometre</string>
    <string name="preference_distance_key" translatable="false">distance</string>
    <string name="preference_distance_miles" translatable="false">miles</string>
    <string name="preference_distance_kilometers" translatable="false">kilometers</string>

    <string name="preference_device_information_key">Cihaz</string>
    <string name="preference_device_information_label">Cihaz Bilgisi</string>
    <string name="preference_error_information_key">Hata</string>
    <string name="preference_error_information_label">Hata Bilgisi</string>

    <string name="link">&lt;a href="HREF">USGS Web Sitesini Ziyaret Et&lt;/a></string>
    <string name="name1" translatable="false">BASK Studios</string>
    <string name="software_version" translatable="false">1.0</string>
    <string name="description">Deprem Bilgileri https://earthquake.usgs.gov/ ve Hava Durumu bilgileri https://openweathermap.org/api sitelerinden güncellenmektedir.</string>

    <string name="about_name">Yapımcı:</string>
    <string name="about_version">Versiyon:</string>
    <string name="about_description">Açıklama:</string>
    <string name="about_install">İndirilme Tarihi:</string>
    <string name="about_last_viewed">Son Görülme:</string>

    <string name="details_title">Başlık:</string>
    <string name="details_location">Lokasyon:</string>
    <string name="details_coordinates">Koordinatlar:</string>
    <string name="details_time">Zaman:</string>
    <string name="details_depth">Derinlik:</string>
    <string name="details_significance">Önem:</string>
    <string name="details_more_details">Daha Fazla Detay:</string>

    <string name="weather_button_text">7 Günlük Hava Durumuna Bak</string>
    <string name="statistics_today">Bugünkü Depremler</string>
    <string name="statistics_this_week">Bu Hafta</string>
    <string name="statistics_this_month">Bu Ay</string>
    <string name="title_activity_about_us" translatable="false">AboutUsActivity</string>
    <string name="title_activity_weather">Hava Durumu</string>
    <string name="preference_temperature_celsius" translatable="false">℃</string>
    <string name="preference_temperature_fahrenheit" translatable="false">℉</string>
    <string name="preference_temperature_key">Sıcaklık</string>
    <string name="temperature_units">Sıcaklık Birimleri</string>
    <string name="morning_temperature">Gündüz Sıcaklığı</string>
    <string name="day_temperature">Gün Sıcaklığı</string>
    <string name="evening_temperature">Akşam Sıcaklığı:</string>
    <string name="night_temperature">Gece Sıcaklığı:</string>
    <string name="atmospheric_pressure">Atmosferik basınç:</string>
    <string name="humidity">Nem:</string>
    <string name="wind_speed">Rüzgar Hızı:</string>
    <string name="weather_details">Hava Durumu Detayları</string>


    <string name="once1" translatable="false">
Dolap üzerine konulan eşya ve büro malzemeleri kayarak düşmelerini önlemek için plastik tutucu malzeme veya yapıştırıcılarla sabitlenmelidir.
Soba ve diğer ısıtıcılar sağlam malzemelerle duvara veya yere sabitlenmelidir.
Dolaplar ve devrilebilecek benzeri eşyalar birbirine ve duvara sabitlenmelidir.
      </string>
    <string name="once2" translatable="false">
Tezgah üzerindeki kayabilecek beyaz eşyaların altına metal profil koyarak bunların kayması önlenmelidir.
Zehirli, patlayıcı, yanıcı maddeler düşmeyecek bir konumda sabitlenmeli ve kırılmayacak bir şekilde depolanmalıdır. Bu maddelerin üzerlerine fosforlu, belirleyici etiketler konulmalıdır.</string>

<string name="sıra" translatable="false">Sabitlenmemiş dolap, raf, pencere vb. eşyalardan uzak durulmalıdır.
Varsa sağlam sandalyelerle desteklenmiş masa altına veya dolgun ve hacimli koltuk, kanepe, içi dolu sandık gibi koruma sağlayabilecek eşya yanına çömelerek hayat üçgeni oluşturulmalıdır.
Baş iki el arasına alınarak veya bir koruyucu (yastık, kitap vb) malzeme ile korunmalıdır. Sarsıntı geçene kadar bu pozisyonda beklenmelidir.
Güvenli bir yer bulup, diz üstü ÇÖK, Başını ve enseni koruyacak şekilde KAPAN, Düşmemek için sabit bir yere TUTUN
Okulda sınıfta ya da büroda ise sağlam sıra, masa altlarında veya yanında; koridorda ise duvarın yanına hayat üçgeni oluşturacak şekilde ÇÖK-KAPAN-TUTUN hareketi ile baş ve boyun korunmalıdır.</string>
<string name="son" translatable="false">
    Önce kendi emniyetinizden emin olun.
Sonra çevrenizde yardım edebileceğiniz kimse olup olmadığını kontrol edin.
Depremlerden sonra çıkan yangınlar oldukça sık görülen ikincil afetlerdir. Bu nedenle eğer gaz kokusu alırsanız, gaz vanasını kapatın. Camları ve kapıları açın. Hemen binayı terk edin.
Dökülen tehlikeli maddeleri temizleyin.
Hasarlı binalardan ve enerji nakil hatlarından uzak durun.
Önce yakın çevrenizde acil yardıma gerek duyanlara yardım edin.
Sonra mahalle toplanma noktanıza gidin.
</string>

</resources>