<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.itu.csc.quakenweather.activities.AboutUsFragment">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="edu.itu.csc.quakenweather.activities.AboutUsActivity">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/name1_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name1_text"
                android:textStyle="bold"
                android:text="@string/about_name"
                android:layout_weight="1"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/name1_data"
                android:text="@string/name1"
                android:textStyle="bold|italic"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>




        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/version_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/version_text"
                android:textStyle="bold"
                android:text="@string/about_version"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/version_data"
                android:textStyle="bold|italic"
                android:textColor="#000000"
                android:text="@string/software_version"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/description_text"
                android:textStyle="bold"
                android:text="@string/about_description"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/description_data"
                android:inputType="textMultiLine"
                android:textStyle="bold|italic"
                android:textColor="#000000"
                android:text="@string/description"
                android:layout_weight="2"/>
        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/install_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/install_text"
                android:textStyle="bold"
                android:text="@string/about_install"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/install_data"
                android:textStyle="bold|italic"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="10dp"
            android:paddingLeft="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_layout"
            android:orientation="horizontal"
            android:weightSum="3">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/last_text"
                android:textStyle="bold"
                android:text="@string/about_last_viewed"
                android:layout_weight="1"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/last_data"
                android:textStyle="bold|italic"
                android:textColor="#000000"
                android:layout_weight="2"/>
        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="50dp"
            android:paddingLeft="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/last_layout2"
            android:orientation="horizontal"
            android:weightSum="3">


            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/last_data2"
                android:text="Deprem Çantanızı Oluşturmayı İhmal Etmeyiniz"
                android:textStyle="bold|italic"
                android:textColor="#000000"
                android:layout_weight="3"/>
        </LinearLayout>


    </LinearLayout>

</FrameLayout>
