<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="edu.itu.csc.quakenweather.activities.QuakeDetailsActivity">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_text"
            android:text="@string/details_title"
            android:textSize="20dp"
            android:layout_weight="2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/title_data"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_text"
            android:text="@string/details_location"
            android:textSize="20dp"

            android:layout_weight="2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_data"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/coordinates_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coordinates_text"
            android:text="@string/details_coordinates"
            android:textSize="20dp"

            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/coordinates_data"
            android:layout_weight="1"/>
    </LinearLayout>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/time_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_text"
            android:text="@string/details_time"
            android:textSize="20dp"

            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/time_data"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/depth_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/depth_text"
            android:text="@string/details_depth"
            android:textSize="20dp"

            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/depth_data"
            android:layout_weight="1"/>
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/significance_layout"
        android:orientation="horizontal"
        android:weightSum="3">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/significance_text"
            android:text="@string/details_significance"
            android:textSize="20dp"

            android:layout_weight="2"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/significance_data"
            android:layout_weight="1"/>
    </LinearLayout>




    <LinearLayout
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/url_link_layout"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/url_link_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/details_more_details"

            android:textSize="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/url_link_data"
            android:layout_weight="1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buton"
        android:orientation="horizontal"
        android:weightSum="3">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deprembuton"
            android:textColor="#FAFAFA"
            android:textSize="20sp"
            android:shadowColor="#A8A8A8"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="Deprem Anında Ne Yapmalısınız?"
            android:background="@drawable/button_background">

        </Button>
    </LinearLayout>



</LinearLayout>
