<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="com.bask.studios.depremBilgi.activities.whatshoulddo"
    >



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="DEPREM ÖNCESİ ALINACAK ÖNLEMLER"
                android:textAlignment="center"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"

                >

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/once1">


                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/once2">


                </androidx.appcompat.widget.AppCompatImageView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/once1"></TextView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/once3">


                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/once4">


                </androidx.appcompat.widget.AppCompatImageView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/once2"></TextView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DEPREM ANINDA YAPILMASI GEREKENLER"
                android:textAlignment="center"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"

                >

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                android:weightSum="2">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/sira1">


                </androidx.appcompat.widget.AppCompatImageView>

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:src="@drawable/sira2">


                </androidx.appcompat.widget.AppCompatImageView>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/sıra"></TextView>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="DEPREM SONRASINDA YAPILMASI GEREKENLER"
                android:textAlignment="center"
                style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"

                >

            </TextView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">


                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@drawable/sonra1">


                </androidx.appcompat.widget.AppCompatImageView>




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:orientation="horizontal"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:textSize="16dp"
                    android:text="@string/son"></TextView>
            </LinearLayout>
            <com.google.android.gms.ads.AdView
                xmlns:ads="http://schemas.android.com/apk/res-auto"
                android:id="@+id/adView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_alignParentBottom="true"
                ads:adSize="BANNER"
                ads:adUnitId="ca-app-pub-1285295181757267/3618025003">
            </com.google.android.gms.ads.AdView>
        </LinearLayout>


</ScrollView>